@@ -46,7 +46,7 @@ dependency(){
 
 start(){
 	echo "starting light4j ..."
-	JVM_OPS="-server -Xmx768M -XX:MaxPermSize=256m"
+	JVM_OPS="-server -Xmx384m -Xss228k -Djava.awt.headless=true"
 	#setsid java $JVM_OPS -Dlight4j.directory=/soft/softwares/library/ -Dlogserver -jar target/light4j-3.0.1.jar >> /dev/null 2>&1 &
 	setsid java $JVM_OPS -Dlight4j.directory=/soft/softwares/library/ -Dlogserver -cp target/light4j-3.0.1.jar com.xlongwei.light4j.Servers >> /dev/null 2>&1 &
 	#env enableRegistry=true STATUS_HOST_IP=api.xlongwei.com setsid java $JVM_OPS -Dlight4j.directory=/soft/softwares/library/ -Dlogserver -cp target/light4j-3.0.1.jar com.xlongwei.light4j.Servers >> /dev/null 2>&1 &
